--- a/src/Sonia.css
+++ b/src/Sonia.css
@@ -1,10 +1,29 @@
 .Sonia {
   display: flex;
   flex-direction: column;
-  margin: 2rem;
   height: 100vh;
   position: relative;
+  background: radial-gradient(circle, #89BCFF 0%, rgba(255,255,255,1) 60%);
+  filter: blur(0px);
+  backdrop-filter: blur(20px); /* Para mais suavidade */
 }
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #AFD2FF; /* Azul para o header */
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Inter', sans-serif;
+  font-size: 1.2rem;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); /* Sombra leve para destacar */
+  z-index: 1000; /* Para que fique sobre outros elementos */
+}
+
 
 .image-title-container {
   display: flex;
