--- a/src/Sonia.css
+++ b/src/Sonia.css
@@ -1,35 +1,28 @@
 .Sonia {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 92vh;
   position: relative;
   background: radial-gradient(circle, #89BCFF 0%, rgba(255,255,255,1) 60%);
   filter: blur(0px);
   backdrop-filter: blur(20px); 
-}
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;
-  background-color: #AFD2FF; 
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Inter', sans-serif;
-  font-size: 1.2rem;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1); 
-  z-index: 1000; 
+  margin: 0;
 }
 
+#header{
+  background-color: #89BCFF;
+  height: 8vh;
+}
+
+body{
+  margin: 0;
+}
 
 .image-title-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 9rem;
+  padding-top: 16rem;
 }
 
 .messages-container {
@@ -66,45 +59,4 @@
   color: white; 
   align-self: flex-end; 
   text-align: right;
-}
-
-
-.input-form {
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 90%;
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
-  background-color: white;
-  box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-}
-
-.input-form input[type="text"] {
-  flex-grow: 1;
-  line-height: 2;
-  padding: 0.5rem;
-  font-family: 'Inter', sans-serif; 
-  border: 2px solid #ccc; 
-  border-radius: 50px; 
-  background-color: transparent; 
-  transition: all 0.3s ease; 
-  outline: none; 
-}
-
-.input-form input[type="text"]:focus {
-  border: 2px solid #007BFF; 
-  background-color: transparent; 
-  box-shadow: none; 
-}
-
-.input-form button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 0.5rem;
-  font-size: 1.5rem;
 }
