--- a/src/pages/Sonia/Sonia.css
+++ b/src/pages/Sonia/Sonia.css
@@ -31,9 +31,9 @@ body{
   gap: 0.5rem; 
   flex-grow: 1;
   overflow-y: auto;
-  padding: 1rem;
-  margin-bottom: 6rem;
+  padding: 0rem 10rem ;
   font-family: 'Inter', sans-serif;
+  margin: 2rem 0rem 0rem 0rem;
 }
 
 .message {
